--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Palindrome Checker</title>
+    <link rel="preload" as="font" type="font/ttf" crossorigin="anonymous"
+        href="fonts/PlaypenSans-VariableFont_wght.ttf">
+    <link rel="preload" as="font" type="font/ttf" crossorigin="anonymous" href="fonts/Gabarito-VariableFont_wght.ttf">
+    <link rel="preload" as="font" type="font/ttf" crossorigin="anonymous"
+        href="fonts/JosefinSans-VariableFont_wght.ttf">
     <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
